--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -231,3 +231,11 @@ input[type="checkbox"] {
 .empty {
   visibility: hidden;
 }
+
+.positive-profit {
+  color: red;
+}
+
+.negative-profit {
+  color: blue;
+}
