--- a/web/stock_data_flow/viz/templates/viz/calc.html
+++ b/web/stock_data_flow/viz/templates/viz/calc.html
@@ -29,25 +29,25 @@
       {% for sector, details in data.items %}
         <div class="sector">
           <div class="sector-header">{{ sector }}</div>
-          <!-- 구성 종목 헤더 추가 -->
-          <div class="stocks-header">구성 종목</div>
-          <div class="stocks">
-            {% for stock in details.종목 %}
-              <div class="stock">{{ stock }}</div>
-            {% endfor %}
-          </div>
-          <div class="sector-profit-title">섹터별 수익금(1,000만원 기준)</div>
-          <div class="profits">
-            {% for period, profit in details.수익.items %}
-              <div class="profit">
-                <div class="period">{{ period }}</div>
-                <div class="amount">{{ profit }}</div>
-              </div>
-            {% endfor %}
+          <div class="sector-info">
+            <div class="stocks-header">구성 종목</div>
+            <div class="stocks">
+              {% for stock in details.종목 %}
+                <div class="stock">{{ stock }}</div>
+              {% endfor %}
+            </div>
+            <div class="profits-header">섹터별 수익금(1,000만원 기준)</div>
+            <div class="profits">
+              {% for period, profit in details.수익.items %}
+                <div class="profit {{ profit|floatformat:2|'positive' if profit > 0 else 'negative' }}">
+                  <div class="period">{{ period }}</div>
+                  <div class="amount">{{ profit|floatformat:2 }}</div>
+                </div>
+              {% endfor %}
+            </div>
           </div>
         </div>
       {% endfor %}
-      <!-- 빈 박스 추가 -->
       <div class="sector empty"></div>
       <div class="sector empty"></div>
       <div class="sector empty"></div>
