--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -217,29 +217,19 @@ input[type="checkbox"] {
 }
 
 .sector-header {
-  font-weight: bold;
-  margin-bottom: 14px;
+  color: #008000; 
+  font-size: 18px; 
 }
 
-.stocks, .profits {
-  margin-bottom: 10px;
+.stocks-header, .profits-header {
+  color: #008000; 
+  font-weight: bold; 
 }
 
-.stock, .profit {
-  background: #fff; 
-  padding: 5px;
-  margin-bottom: 5px;
-  border-bottom: 1px solid #eee; 
+.profit .amount.positive {
+  color: red; 
 }
 
-.empty {
-  visibility: hidden;
-}
-
-.positive-profit {
-  color: red;
-}
-
-.negative-profit {
+.profit .amount.negative {
   color: blue;
 }
