--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -226,10 +226,10 @@ input[type="checkbox"] {
   font-weight: bold; 
 }
 
-.profit .amount.positive {
-  color: red; 
+.positive-profit {
+  color: red;
 }
 
-.profit .amount.negative {
+.negative-profit {
   color: blue;
 }
