--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -207,7 +207,7 @@ input[type="checkbox"] {
 }
 
 .description {
-  margin-bottom: 5px; 
+  margin-bottom: 10px; 
 }
 
 .sector {
@@ -220,10 +220,14 @@ input[type="checkbox"] {
   color: #000000; 
   font-weight:bold;
   font-size: 18px; 
+  border-bottom: 1px solid #ccc; /* 아래쪽 테두리를 회색으로 설정 */
+  padding-bottom: 10px; /* 내용과 테두리 사이 간격 */
 }
 
 .stocks-header, .profits-header {
   color: #008000;  
+  border-top: 1px solid #ccc; /* 위쪽 테두리를 회색으로 설정 */
+  padding-top: 10px; /* 내용과 테두리 사이 간격 */
 }
 
 .positive-profit {
